tests/good/interpret/054-def-2-with.clap
def  f (x) = if x < 0 then 42 else g (x)
with g (x) = f(x-1)

val q = f(42)

