tests/bad/typing/029-recursive-def.clap
** int -> int
def  f (x) = g(x)

** int -> int
with g (x) = if x < 42 then x else f(x-1)

val z = f ('c')
